--- a/css/styles.css
+++ b/css/styles.css
@@ -168,10 +168,12 @@ img {
   color: var(--main-color);
   padding-top: 32px;
   padding-bottom: 32px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-curretlink {
+.header-currentlink {
   color: var(--accent-color);
+  border-bottom: 4px solid var(--accent-color);
 }
 
 .header-link:hover,
@@ -191,6 +193,7 @@ img {
   display: flex;
   align-items: center;
   gap: 10px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-contact-icon {
@@ -198,12 +201,6 @@ img {
   width: 16px;
   height: 16px;
 }
-
-/* .header-contacts-item a[href^="mailto"]::before  {
-  content: "";
-  background-image: url('data:image/svg+xml,%3csvg width="16" height="12" fill="none" xmlns="http://www.w3.org/2000/svg"%3e%3cpath d="M14.5 0h-13C.673 0 0 .673 0 1.5v9c0 .827.673 1.5 1.5 1.5h13c.827 0 1.5-.673 1.5-1.5v-9c0-.827-.673-1.5-1.5-1.5Zm0 1c.068 0 .133.014.192.039L8 6.839l-6.692-5.8A.498.498 0 0 1 1.5 1h13Zm0 10h-13a.5.5 0 0 1-.5-.5V2.095l6.672 5.783a.5.5 0 0 0 .656 0L15 2.095V10.5a.5.5 0 0 1-.5.5Z" fill="%23757575"/%3e%3c/svg%3e');
-  fill: currentColor;
-} */
 
 .header-contact:hover,
 .header-contact:focus {
@@ -241,6 +238,9 @@ img {
 }
 
 .tagline-btn {
+  min-width: 200px;
+  height: 50px;
+
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
@@ -260,6 +260,8 @@ img {
   padding: 10px 32px;
 
   margin: 0 auto;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .tagline-btn:hover,
@@ -332,6 +334,30 @@ img {
   margin-right: var(--typical-distance);
 }
 
+.about-item {
+  position: relative;
+}
+
+.about-item-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  text-transform: uppercase;
+
+  color: #ffffff;
+  width: 370px;
+  height: 70px;
+  background-color: rgba(47, 48, 58, 0.8);
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  position: absolute;
+  bottom: 0;
+}
+
 /* -------------co-worker----------- */
 .co-worker {
   background-color: var(--accent-backgroundcolor);
@@ -402,6 +428,8 @@ img {
   color: #afb1b8;
   background-color: var(--main-backgroundcolor);
   margin-left: 10px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .co-worker-soc-item:first-child {
@@ -453,12 +481,6 @@ img {
   margin-left: 0;
 }
 
-.partners-link:focus,
-.partners-link:hover {
-  color: var(--accent-color);
-  border-color: var(--accent-color);
-}
-
 .partners-link {
   display: flex;
   align-items: center;
@@ -469,8 +491,16 @@ img {
   border: 1px solid #afb1b8;
   border-radius: 4px;
   color: #afb1b8;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.partners-link:focus,
+.partners-link:hover {
+  color: var(--accent-color);
+  border-color: var(--accent-color);
+}
 .partners-icon {
   fill: currentColor;
   width: 106px;
@@ -505,6 +535,9 @@ img {
   border: none;
   border-radius: 4px;
   padding: 6px 22px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filter-button:hover,
@@ -525,21 +558,20 @@ img {
 }
 
 .gallery-item {
-  width: calc(100% / 3 - var(--typical-distance));
+  flex-basis: calc(100% / 3 - var(--typical-distance));
   margin: calc(var(--typical-distance) / 2);
 }
 
 .gallery-link {
   box-shadow: none;
   display: block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .gallery-link:hover,
 .gallery-link:focus {
-  box-shadow: 
-  0px 1px 1px rgba(0, 0, 0, 0.12),
-  0px 4px 4px rgba(0, 0, 0, 0.06),
-  1px 4px 6px rgba(0, 0, 0, 0.16);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .gallery-item-content {
@@ -563,6 +595,41 @@ img {
   color: var(--second-color);
 }
 
+.gallery-item-slide {
+  position: relative;
+  overflow: hidden;
+}
+
+.gallery-item-about {
+  font-size: 18px;
+  line-height: 1.56;
+  color: #ffffff;
+  background-color: rgba(33, 150, 243, 0.9);
+  position: absolute;
+  top: 0;
+  height: 100%;
+  overflow: auto;
+  padding: 63px 24px;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.gallery-link:hover .gallery-item-about {
+  transform: translateY(0%);
+}
+
+.gallery-item-about::-webkit-scrollbar {
+  width: 4px;
+}
+
+.gallery-item-about::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+.gallery-item-about::-webkit-scrollbar-thumb {
+  background-color: rgb(33, 100, 255);
+  outline: 1px solid slategrey;
+}
 
 /* -------------FOOTER----------- */
 
@@ -584,10 +651,12 @@ img {
 .footer-link-geo {
   line-height: 1.71;
   color: var(--tagline-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-link {
   line-height: 1.71;
   color: rgba(255, 255, 255, 0.6);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-link:hover,
@@ -628,11 +697,6 @@ img {
   margin-left: 0;
 }
 
-.footer-social-link:hover,
-.footer-social-link:focus {
-  background-color: var(--accent-color);
-}
-
 .footer-social-link {
   display: flex;
   align-items: center;
@@ -642,9 +706,74 @@ img {
   border-radius: 50%;
   color: #ffffff;
   background-color: rgba(255, 255, 255, 0.1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-social-link:hover,
+.footer-social-link:focus {
+  background-color: var(--accent-color);
 }
 
 .footer-social-icon {
   fill: currentColor;
 }
 
+/*-------------MODAL----------*/
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(25, 28, 38, 0.252);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
+}
+
+.backdrop.is-hidden .modal {
+  transform: scale(0) rotate(-360deg);
+}
+
+.modal {
+  position: absolute;
+  top: calc( ( 100% - 581px )  / 2 );
+  left: calc( ( 100% - 528px )  / 2 );
+  min-width: 528px;
+  min-height: 581px;
+  background-color: #ffffff;
+  border-radius: 4px;
+
+  transform: scale(1) rotate(0);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-btn {
+  position: absolute;
+  right: 8px;
+  top: 8px;
+  width: 30px;
+  height: 30px;
+  border: 1px solid #999999;
+  border-radius: 50%;
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #000000;
+}
+
+.modal-close-icon {
+  fill: currentColor;
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.no-scroll {
+  overflow: hidden;
+}
