--- a/css/styles.css
+++ b/css/styles.css
@@ -340,13 +340,12 @@ img {
 
 .about-item-title {
   font-weight: 700;
-  font-size: 14px;
   line-height: 1.14;
   text-align: center;
   text-transform: uppercase;
 
   color: #ffffff;
-  width: 370px;
+  width: 100%;
   height: 70px;
   background-color: rgba(47, 48, 58, 0.8);
 
@@ -775,5 +774,5 @@ img {
 }
 
 .no-scroll {
-  overflow: hidden;
+  overflow: auto;
 }
